--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.0",
     "prisma": "^4.15.0"
   }
 }
