--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^4.16.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -18,18 +18,19 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-intl": "^2.15.0-beta.5",
+    "node-cron": "^3.0.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "react-modal": "^3.16.1",
     "react-player": "^2.12.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/node-cron": "^3.0.7",
     "@types/react-modal": "^3.16.0",
-    "prisma": "^4.15.0"
+    "prisma": "^4.16.0"
   }
 }
