--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "next": "13.4.4-canary.5",
+    "next-auth": "^4.22.1",
     "next-intl": "^2.15.0-beta.5",
     "node-cron": "^3.0.2",
     "postcss": "8.4.24",
